--- a/hibernate-movie/src/main/resources/application.properties
+++ b/hibernate-movie/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-# Datasource configuration
 spring.datasource.url= jdbc:postgresql://localhost:5432/MovieDB
 spring.datasource.username= postgres
 spring.datasource.password= rihanna
-# Hibernate behaviour
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
 #Turn Statistics on
-logging.level.org.hibernate.stat= trace
+logging.level.org.hibernate.stat=debug
 # Enable logging
 spring.jpa.show-sql=true
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode= always
+spring.sql.init.platform= postgres
