--- a/hibernate-movie/src/main/resources/application.properties
+++ b/hibernate-movie/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/MovieDB
 spring.datasource.username= postgres
-spring.datasource.password= Miwakodori23!
+spring.datasource.password= rihanna
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
 #Turn Statistics on
