--- a/hibernate-movie/src/main/resources/application.properties
+++ b/hibernate-movie/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode= always
 spring.sql.init.platform= postgres
+spring.banner.location.classpath=/path/to/banner/banner.txt
